--- a/ionic1/www/index.html
+++ b/ionic1/www/index.html
@@ -3,25 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>My Food Truck App</title>
 
     <link rel="manifest" href="manifest.json">
 
     <!-- un-comment this code to enable service worker
     <script>
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('service-worker.js')
+        navigator.serviceWorker.register('sx'ervice-worker.js')
           .then(() => console.log('service worker installed'))
           .catch(err => console.log('Error', err));
       }
     </script>-->
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -30,23 +26,13 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
+    <script src="app/app.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="app" class="myfoodtruck">
+    <ion-nav-view></ion-nav-view>
 
-    <ion-pane>
-      <!--<ion-header-bar class="bar-stable">
-        <h1 class="title">My Food Truck App</h1>
-      </ion-header-bar>-->
-      <div class="bar bar-header">
-        <h1 class="title">My Food Truck App</h1>
-      </div>
-      <ion-content>
-      </ion-content>
-
-      <div class="bar bar-footer">
-        <p class="title">@Copyrights 2017</p>
-      </div>
-    </ion-pane>
+    <!--<ion-pane>
+      <ion-content></ion-content>
+    </ion-pane>-->
   </body>
 </html>
