--- a/ionic1/www/app/home/home.html
+++ b/ionic1/www/app/home/home.html
@@ -1,22 +1,27 @@
 <!--<ion-header-bar class="bar-stable">
   <h1 class="title">My Food Truck App</h1>
 </ion-header-bar>-->
-<div class="bar bar-header">
+<div class="bar bar-header bar-positive">
   <h1 class="title">My Food Truck App</h1>
 </div>
 <!-- Tabs on Footer-->
 <!--<ion-tabs class="tabs-icon-top">-->
-<ion-tabs class="tabs-icon-only">
-  <ion-tab title="Home" icon="ion-home">
-    <ion-view></ion-view>
+
+<ion-tabs class="tabs-icon-only tabs-positive">
+
+  <ion-tab title="Home" icon="ion-home" href="#/home/home">
+    <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="Favorite" icon="ion-star">
-    <ion-view></ion-view>
+
+  <ion-tab title="Favorite" icon="ion-star" href="#/home/favorite">
+    <ion-nav-view name="tab-favorite"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="Settings" icon="ion-gear-a">
-    <ion-view></ion-view>
+
+  <ion-tab title="Settings" icon="ion-gear-a" href="#/home/settings">
+    <ion-nav-view name="tab-settings"></ion-nav-view>
   </ion-tab>
 </ion-tabs>
+
 <!--<div class="bar bar-footer">
   <p class="title">@Copyrights 2017</p>
 </div>-->
