--- a/ionic1/www/app/register/register.html
+++ b/ionic1/www/app/register/register.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Register">
   <ion-content class=" padding has-header">
     <h1>Register</h1>
+
+    <a href="#/app/user/21" class="button button-positive">Go to User Details</a>
   </ion-content>
 </ion-view>
