--- a/ionic1/www/index.html
+++ b/ionic1/www/index.html
@@ -26,6 +26,8 @@
 
     <!-- your app's js -->
     <script src="app/app.js"></script>
+    <script src="app/controllers/my-account-ctrl.js"></script>
+
   </head>
   <body ng-app="app" class="myfoodtruck">
     <ion-nav-view></ion-nav-view>
