--- a/ionic1/www/index.html
+++ b/ionic1/www/index.html
@@ -25,8 +25,8 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="app/app.js"></script>
-    <script src="app/controllers/my-account-ctrl.js"></script>
+    <!-- <script src="app/app.js"></script> -->
+    <script src="js/bundle.js"></script>
 
   </head>
   <body ng-app="app" class="myfoodtruck">
