--- a/ionic1/www/app/register/register.html
+++ b/ionic1/www/app/register/register.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Register">
+<ion-view view-title="Register" ng-controller="registerCtrl">
   <ion-content class=" padding has-header">
     <h1>Register</h1>
 
