--- a/ionic1/www/app/home/home-tab.html
+++ b/ionic1/www/app/home/home-tab.html
@@ -1,6 +1,8 @@
 <ion-view view-title="Home Tab">
   <ion-content class="padding has-header">
     <h1>Home</h1>
+
+  <a href="#/app/user" class="button button-positive">Go to User</a>
   </ion-content>
 </ion-view>
 
