update angular folder structure

--- a/ionic1/www/index.html
+++ b/ionic1/www/index.html
@@ -29,7 +29,7 @@
     <script src="js/bundle.js"></script>
 
   </head>
-  <body ng-app="app" class="myfoodtruck">
+  <body ng-app="appfoodtruck" class="myfoodtruck">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
