--- a/ionic1/www/index.html
+++ b/ionic1/www/index.html
@@ -26,6 +26,7 @@
 
     <!-- your app's js -->
     <!-- <script src="app/app.js"></script> -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="js/bundle.js"></script>
 
   </head>
